# lookback

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  REPO_MANIFEST.md  TASKS.md  docker-compose.yml  dragback.md  pyproject.toml
backend/dragback/: __init__.py  cli.py  config.py  demo.py  domain.py  fixtures.py  grants.py  hashing.py  provenance.py  runtime.py
backend/dragback/graph/: base.py  (+3 more)
backend/tests/: conftest.py  test_authority.py  test_authority_guards.py  test_cli.py  test_demo_flow.py  test_events.py  test_fixture_contract.py  test_grant_verification_codes.py  test_grants.py  test_live_workspaces.py  test_llm_extraction.py  test_neo4j_integration.py  test_neo4j_store.py  test_runtime_config.py  test_scenario_authority_contexts.py  test_scenario_catalog.py  test_scenario_runner.py  test_scenario_service_flow.py  test_selective_invalidation.py  test_service_concurrency.py  test_service_demo_flow.py  test_service_resilience.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD_ORDER.md  CODEX_START_PROMPT.md  DECISIONS.md  DEMO_SCRIPT.md  GRAPH_SCHEMA.md  LIVE_WORKSPACE_CLI.md  PRESENTATION_READINESS.md  PRODUCT_SPEC.md  TEST_PLAN.md
examples/: dragback-change.yaml  dragback-corrected-plan.json  dragback-workspace.yaml
fixtures/: decision_v18.json  graph_v17.json  proposal_ignored.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  demo-control.test.ts  demo-control.ts  styles.css  types.ts
scripts/: bootstrap.sh  check.sh  run_demo.sh  run_services.sh  run_stack.sh
(+94 files in other folders)
