[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragback"
version = "0.1.0"
description = "Continuous decision-provenance control for autonomous coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
graph = ["neo4j>=5.20"]
agent = ["langgraph>=0.2"]
llm = ["anthropic>=0.40"]
full = ["neo4j>=5.20", "langgraph>=0.2", "anthropic>=0.40"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
dragback-demo = "dragback.demo:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["anthropic", "langgraph.*", "neo4j"]
ignore_missing_imports = true
